--- a/src/app/components/secondary-form/secondary-form.scss
+++ b/src/app/components/secondary-form/secondary-form.scss
@@ -25,21 +25,12 @@
     margin: 0.5rem 0 0 0;
   }
 
-  .quick-register-link {
+  .quick-register-info {
     margin-top: 1rem;
     
     p {
       margin: 0;
       color: #666;
-      
-      a {
-        color: #1976d2;
-        text-decoration: none;
-        
-        &:hover {
-          text-decoration: underline;
-        }
-      }
     }
   }
 }
