--- a/src/app/components/secondary-form/secondary-form.html
+++ b/src/app/components/secondary-form/secondary-form.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <app-step-client-data></app-step-client-data>
+  <app-client-data></app-client-data>
 
   <div class="navigation-buttons">
     <button mat-stroked-button (click)="goToMainForm()">
